[gd_scene load_steps=3 format=3 uid="uid://ctfylvylgevof"]

[ext_resource type="Script" uid="uid://dh2wwarhajmlw" path="res://ui/screens/main_screen/controls/programgroup.gd" id="1_756ef"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f5b1p"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.14044744, 0.14044744, 0.14044744, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 4

[node name="Programgroup" type="PanelContainer"]
offset_right = 259.0
offset_bottom = 148.0
theme_override_styles/panel = SubResource("StyleBoxFlat_f5b1p")
script = ExtResource("1_756ef")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "???"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ProgramList" type="ItemList" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
auto_width = true
auto_height = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="AddProgramButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Add"

[node name="RemoveProgramButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Remove"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="RenameGroupButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Rename Group"

[node name="DeleteGroupButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Delete Group"

[node name="CommandsButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
disabled = true
text = "Edit Commands"

[connection signal="item_selected" from="VBoxContainer/HBoxContainer/ProgramList" to="." method="_on_program_list_item_selected"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/AddProgramButton" to="." method="_on_add_program_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/RemoveProgramButton" to="." method="_on_remove_program_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/RenameGroupButton" to="." method="_on_rename_group_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/DeleteGroupButton" to="." method="_on_delete_group_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/CommandsButton" to="." method="_on_commands_button_pressed"]
